# MiyuLang

./: .gitignore  .merlin  Makefile  dune-project  miyu.opam
examples/: 01.miyu  02.miyu  03.miyu  04.miyu
src/: dune  main.ml
src/ast/: astTypes.ml  astTypes.mli  dune
src/desugaring/: desugarProgram.ml  desugaredAst.ml  desugaredAst.mli  dune  partitionItems.ml  partitionItems.mli  separateClosure.ml
src/parsing/: dune  lexAndParse.ml  lexAndParse.mli  lexer.mll  parsedAst.ml  parsedAst.mli  parser.conflicts  parser.messages  parser.mly  pprintParsedAst.ml  pprintParsedAst.mli  pprintParserTokens.ml
src/utils/: assoc.ml  assoc.mli  comparison.mli  env.ml  env.mli  location.ml  location.mli  rbtree.ml  rbtree.mli  utils.ml  utils.mli
