(library
 (name parsing)
 (libraries utils ast core fmt menhirLib)
 (flags -w)
 (preprocess
  (pps bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --table))

(rule
 (targets parserMessages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))
